# prism-forge-contract

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-artifacts.yml
schema/: config_response.json  execute_msg.json  instantiate_msg.json  launch_config.json  query_msg.json
scripts/: README.md  build_artifacts.sh  deploy.ts  deploy_configs.ts  helpers.ts  package.json
src/: contract.rs  error.rs  msg.rs  state.rs
src/testing/: tests.rs
