[package]
description = "Prism Forge contract"
edition = "2018"
license = "MariaDB"
name = "prism-forge"
version = "1.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = {version = "0.16.7"}
cw-asset = {default-features = false, version = "0.3.4"}
cw-storage-plus = {version = "0.8.0"}
cw2 = "0.8.0"
cw20 = {version = "0.8.0"}
schemars = "0.8.1"
serde = {version = "1.0.103", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.20"}

[dev-dependencies]
cosmwasm-schema = "0.16.0"
terra-cosmwasm = "2.2.0"
